# secretvault

./: Cargo.toml  Dockerfile  build.rs  config.json  config.mem_store.json  test_rest.sh  whitepaper.html
protos/: secret_vault_admin_service.proto  secret_vault_service.proto
src/: auth_token.rs  config.rs  main.rs  memvault.rs  prelude.rs  rocksvault.rs  store_factory.rs  svc_grpc.rs  svc_grpc_admin.rs  svc_rest.rs  svc_rest_admin.rs  svc_rest_warp.rs  tests.rs
