[package]
name = "secret_vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.8"
quote = "1.0.26"
rocksdb = { version = "0.20.1", features = ["multi-threaded-cf"] }
serde = { version = "1.0", features  = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tokio-rustls = "0.23.4"
tonic = { version = "0.8.3", features = ["transport", "tls"] }

[build-dependencies]
tonic-build = "0.8.4"
